--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,16 +9,16 @@
       class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
     >
       <li>
-        <a href="#home" class="hover:underline me-4 md:me-6">Inicio</a>
+        <a href="/#home" class="hover:underline me-4 md:me-6">Inicio</a>
       </li>
       <li>
-        <a href="#skills" class="hover:underline me-4 md:me-6">Habilidades</a>
+        <a href="/#skills" class="hover:underline me-4 md:me-6">Habilidades</a>
       </li>
       <li>
-        <a href="#projects" class="hover:underline me-4 md:me-6">Proyectos</a>
+        <a href="/#projects" class="hover:underline me-4 md:me-6">Proyectos</a>
       </li>
       <li>
-        <a href="#contact" class="hover:underline">Contacto</a>
+        <a href="/#contact" class="hover:underline">Contacto</a>
       </li>
     </ul>
   </div>
