portfolio link modified

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,7 +16,7 @@ const PROJECTS = [
     description:
       "Proyecto realizado para poder presentar y mostrar lo que me apasiona y dedico.",
     imageSrc: "../../public/portfolio.png",
-    linkPage: "https://axel-blog-dev.netlify.app/",
+    linkPage: "https://axelsparta.netlify.app/",
     linkGithub: "https://github.com/AxelSparta/portfolio-astro",
     tags: ["Astro", "Tailwind"],
   },
