fixing images src

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,7 +6,7 @@ const PROJECTS = [
     title: "Blog dev",
     description:
       "El proyecto consiste de un blog personal que permita a los usuarios publicar, editar y gestionar artículos.",
-    imageSrc: "../../public/blog-image.png",
+    imageSrc: "/public/blog-image.png",
     linkPage: "https://axel-blog-dev.netlify.app/",
     linkGithub: "https://github.com/AxelSparta/blog-vite",
     tags: ["ReactJS", "Tailwind", "NodeJS", "MongoDB", "Express"],
@@ -15,7 +15,7 @@ const PROJECTS = [
     title: "Portafolio personal",
     description:
       "Proyecto realizado para poder presentar y mostrar lo que me apasiona y dedico.",
-    imageSrc: "../../public/portfolio.png",
+    imageSrc: "/public/portfolio.png",
     linkPage: "https://axelsparta.netlify.app/",
     linkGithub: "https://github.com/AxelSparta/portfolio-astro",
     tags: ["Astro", "Tailwind"],
