--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -9,7 +9,7 @@ import SocialPill from "./SocialPill.astro";
 <section id="home" class="py-14 lg:py-28 flex flex-col gap-y-4 text-pretty">
   <img
     class="rounded-full size-16 lg:size-20 object-cover animate-blurred-fade-in"
-    src="/public/yo.jpg"
+    src="/yo.jpg"
     alt="axelsparta photo"
   />
   <h1
