fixing mobile view

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -13,17 +13,17 @@ import SocialPill from "./SocialPill.astro";
     alt="axelsparta photo"
   />
   <h1
-    class="text-xl lg:text-4xl flex gap-x-3 items-center font-semibold animate-blurred-fade-in"
+    class="text-xs sm:text-xl lg:text-4xl flex gap-x-3 items-center font-semibold animate-blurred-fade-in"
   >
     Hola, soy Axel Sparta <Badge class="bg-blue-500 text-blue-950"
       >Disponible para trabajar</Badge
     >
   </h1>
-  <h2 class="text-lg lg:text-2xl opacity-90 animate-blurred-fade-in">
+  <h2 class="text-xs sm:text-lg lg:text-2xl opacity-90 animate-blurred-fade-in">
     Desarrollador web y estudiante de ingeniería en sistemas de Mendoza,
     Argentina 🇦🇷.
   </h2>
-  <p class="text-sm lg:text-base animate-blurred-fade-in">
+  <p class="text-xs sm:text-sm lg:text-base animate-blurred-fade-in">
     Siempre estoy aprendiendo nuevas tecnologías, creando proyectos y
     perfeccionandome tanto en el front-end como en el back-end.
   </p>
