--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,3 +1,3 @@
-<span class=`text-xs font-medium px-2.5 py-0.5 rounded ${Astro.props.class}`>
+<span class=`text-xs font-medium lg:px-2.5 p-0.5 rounded ${Astro.props.class}`>
   <slot />
 </span>
