--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import MoonIcon from "../icons/Moon.astro";
 ---
 
 <header class="flex justify-between w-full mx-auto items-center min-h-20">
-  <nav class="flex flex-row gap-x-6 font-bold">
+  <nav class="flex flex-row gap-x-2 sm:gap-x-6 font-bold">
     <a
       class="opacity-80 hover:scale-110 hover:opacity-80 transition-all text-sm lg:text-base"
       href="#home">Inicio</a
